- Fixed an Issue Where Tags Wouldn't Have Enough Contrast
Removed a style override now that the contrast issue has been fixed by Spark.

--- a/RockWeb/Themes/Rock/Styles/_css-overrides.less
+++ b/RockWeb/Themes/Rock/Styles/_css-overrides.less
@@ -62,10 +62,6 @@ h1 {
     opacity: 0.2;
 }
 
-.rockbadge-container .taglist .tag {
-    color: #fff !important;
-}
-
 .tooltip.left .tooltip-arrow {
     right: 1px;
     border-width: 0 1px 0 1px;
